--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
 
 <div class="text_box">
-    <h1>The Afrikan Youth Leaders Medical Alliance</h1>
-    <p>ALYMA ia a platform dedicated to empowering young medical professionals to lead,innovate, and improve healthcare <br>across the continent.
+    <h1>Afrikan Youth Leaders Medical Alliance</h1>
+    <p>AYLMA ia a platform dedicated to empowering young medical professionals to lead,innovate, and improve healthcare <br>across the continent.
     </p>
     <a href="" class="btn">Visit Us To Know More</a>
 </div>
@@ -153,7 +153,7 @@ function showmenu(){
     navlinks.style.right= "0";
 }
 function hidemenu(){
-    navlinks.style.right= "-200px";
+    navlinks.style.right= "-500px";
 }
 </script>
 </body>
